--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@prisma/client": "^6.4.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "uuid": "^11.1.0"
+    "http-status-codes": "^2.3.0",
+    "uuid": "^11.1.0",
+    "validator": "^13.12.0"
   }
 }
