--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/http/server.ts"
+    "dev": "tsx watch src/http/server.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -15,16 +16,22 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.9",
     "prisma": "^6.4.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http-status-codes": "^2.3.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.6",
     "uuid": "^11.1.0",
     "validator": "^13.12.0"
   }
